<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:padding="16dp"
    tools:context="com.payrespect.tutorial.MainActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/email"
        ></EditText>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strBtn1"
        android:id="@+id/btn1"
        android:layout_below="@id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:text="@string/strBtn2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/btn2"></Button>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn2"
        android:id="@+id/radiogroup"
        android:layout_marginTop="20dp">
        <RadioButton
            android:text="@string/strRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:id="@+id/radiobtn1"></RadioButton>
        <RadioButton
            android:text="@string/strRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radiobtn2"></RadioButton>
    </RadioGroup>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:id="@+id/image"></ImageView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:layout_alignBottom="@id/image"
        android:layout_centerHorizontal="true"
        android:id="@+id/image2"
        android:visibility="invisible"
        android:adjustViewBounds="false"></ImageView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radiogroup"
        android:ems="10"
        android:visibility="invisible"
        android:id="@+id/easteregg1"></EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/easteregg1"
        android:layout_centerHorizontal="true"
        android:id="@+id/easteregg2"
        android:text="@string/easteregg2"
        android:visibility="invisible"></Button>

</RelativeLayout>